k8s/overlays/aws/backend-deployment-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
      serviceAccountName: ai-interview-api
